--- a/Documents/Git/trabajo rpc/ProyectoGrpc/pom.xml
+++ b/Documents/Git/trabajo rpc/ProyectoGrpc/pom.xml
@@ -79,6 +79,20 @@
 			<version>6.5.5</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>4.32.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java-util</artifactId>
+			<version>4.32.1</version>
+		</dependency>
+
+
 		<!-- Para tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
