--- a/Documents/Git/trabajo rpc/ProyectoGrpc/pom.xml
+++ b/Documents/Git/trabajo rpc/ProyectoGrpc/pom.xml
@@ -6,10 +6,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.5</version>
-		<relativePath/>
+		<groupId>com.myorg</groupId>
+		<artifactId>proyecto-parent</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<groupId>org.example</groupId>
@@ -74,6 +74,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 			<version>6.5.5</version>
@@ -90,6 +96,12 @@
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java-util</artifactId>
 			<version>4.32.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.myorg</groupId>
+			<artifactId>kafka-module</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 
